# contigo.rs

./: Cargo.toml  README.md
src/: config.rs  lib.rs
src/auth/: account.rs  client.rs  credential.rs  device.rs  mod.rs  xvc.rs
tests/: auth_client.rs
