[package]
name = "contigo"
version = "0.1.0"
authors = ["Sangwon Ryu <bdboy4665@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
sha2 = "0.9"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"